--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ typescript-playground/index.js
 typescript-playground/index.js.map
 typescript-playground/test.js
 typescript-playground/test.js.map
+
+.DS_Store
