--- a/rxjs-playground-exercises/package.json
+++ b/rxjs-playground-exercises/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^7.2.4",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "node-sass": "^4.12.0",
     "random-js": "^1.0.8",
     "random-number": "0.0.9",
     "rxjs": "^6.4.0",
